// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Radar > Black and White 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  border-radius: var(--border-radius);
  padding: 10px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 0px 5px;
  width: 100%;
  height: 100%;
}

.emotion-4 {
  width: 100%;
  height: 10px;
  border-radius: var(--border-radius);
  margin: 5px 0px;
}

<div>
  <div
    class="leaflet-custom-control emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <span>
        Low
      </span>
      <span>
        High
      </span>
    </div>
    <div
      class="emotion-4 emotion-5"
      data-teststyle-background="linear-gradient(to right, white, #7f7f7fff)"
    />
  </div>
</div>
`;

exports[`Radar > Dark Sky 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  border-radius: var(--border-radius);
  padding: 10px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 0px 5px;
  width: 100%;
  height: 100%;
}

.emotion-4 {
  width: 100%;
  height: 10px;
  border-radius: var(--border-radius);
  margin: 5px 0px;
}

<div>
  <div
    class="leaflet-custom-control emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <span>
        Low
      </span>
      <span>
        High
      </span>
    </div>
    <div
      class="emotion-4 emotion-5"
      data-teststyle-background="linear-gradient(to right, rgba(0,94,182,0.133333), rgba(0,94,182,0.2), rgba(0,94,182,0.333333), rgba(0,94,182,0.6), rgba(36,88,175,0.866667), #8e4b9b, #fc5370, #ffb76e, #fffd05, #fffd05, #fffd05, #fffd05)"
    />
  </div>
</div>
`;

exports[`Radar > Meteored 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  border-radius: var(--border-radius);
  padding: 10px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 0px 5px;
  width: 100%;
  height: 100%;
}

.emotion-4 {
  width: 100%;
  height: 10px;
  border-radius: var(--border-radius);
  margin: 5px 0px;
}

<div>
  <div
    class="leaflet-custom-control emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <span>
        Low
      </span>
      <span>
        High
      </span>
    </div>
    <div
      class="emotion-4 emotion-5"
      data-teststyle-background="linear-gradient(to right, #3ffefcff, #1790f9ff, #0000f3ff, #41ff50ff, #32c23dff, #4b8339ff, #ffff50ff, #fdbb3cff, #df5e0bff, #fd8788ff, #e90000ff, #a80000ff, #ef5beeff, #924cbeff, #502a68ff)"
    />
  </div>
</div>
`;

exports[`Radar > NEXRAD Level III 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  border-radius: var(--border-radius);
  padding: 10px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 0px 5px;
  width: 100%;
  height: 100%;
}

.emotion-4 {
  width: 100%;
  height: 10px;
  border-radius: var(--border-radius);
  margin: 5px 0px;
}

<div>
  <div
    class="leaflet-custom-control emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <span>
        Low
      </span>
      <span>
        High
      </span>
    </div>
    <div
      class="emotion-4 emotion-5"
      data-teststyle-background="linear-gradient(to right, #00efe7, #009cf7, #0000f7, lime, #03b703, #087305, #ff0, #ecce00, #fe9300, red, #bd0000, #bd0000)"
    />
  </div>
</div>
`;

exports[`Radar > Original 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  border-radius: var(--border-radius);
  padding: 10px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 0px 5px;
  width: 100%;
  height: 100%;
}

.emotion-4 {
  width: 100%;
  height: 10px;
  border-radius: var(--border-radius);
  margin: 5px 0px;
}

<div>
  <div
    class="leaflet-custom-control emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <span>
        Low
      </span>
      <span>
        High
      </span>
    </div>
    <div
      class="emotion-4 emotion-5"
      data-teststyle-background="linear-gradient(to right, #dfdfdf, #dfdfdf, #9bea8f, #58ff42, #47c278, #4793f9, #0c59ff, #6153c1, #ff93a3, #ff3f35, #c20511, #ffeb0a)"
    />
  </div>
</div>
`;

exports[`Radar > Rainbow @ SELEX-SI 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  border-radius: var(--border-radius);
  padding: 10px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 0px 5px;
  width: 100%;
  height: 100%;
}

.emotion-4 {
  width: 100%;
  height: 10px;
  border-radius: var(--border-radius);
  margin: 5px 0px;
}

<div>
  <div
    class="leaflet-custom-control emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <span>
        Low
      </span>
      <span>
        High
      </span>
    </div>
    <div
      class="emotion-4 emotion-5"
      data-teststyle-background="linear-gradient(to right, #009f9f, #009f9f, #008c4b, #00d319, #21fd22, #fffd1b, #ffd400, #ffab00, #ff6e00, #f01002, #d00523, #e400b1)"
    />
  </div>
</div>
`;

exports[`Radar > TITAN 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  border-radius: var(--border-radius);
  padding: 10px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 0px 5px;
  width: 100%;
  height: 100%;
}

.emotion-4 {
  width: 100%;
  height: 10px;
  border-radius: var(--border-radius);
  margin: 5px 0px;
}

<div>
  <div
    class="leaflet-custom-control emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <span>
        Low
      </span>
      <span>
        High
      </span>
    </div>
    <div
      class="emotion-4 emotion-5"
      data-teststyle-background="linear-gradient(to right, #007e00, #087fdb, #1c47e8, #6e0dc6, #c80f86, #c06487, #d2883b, #fac431, #fefb02, #fe9a58, #fe5f05, #fd341c)"
    />
  </div>
</div>
`;

exports[`Radar > The Weather Channel 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  border-radius: var(--border-radius);
  padding: 10px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 0px 5px;
  width: 100%;
  height: 100%;
}

.emotion-4 {
  width: 100%;
  height: 10px;
  border-radius: var(--border-radius);
  margin: 5px 0px;
}

<div>
  <div
    class="leaflet-custom-control emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <span>
        Low
      </span>
      <span>
        High
      </span>
    </div>
    <div
      class="emotion-4 emotion-5"
      data-teststyle-background="linear-gradient(to right, #01b714, #01b714, #088915, #11651a, #064307, #ffee07, #f8bb08, #f38b08, #f07108, #ea5e09, #df370a, #d3100c)"
    />
  </div>
</div>
`;

exports[`Radar > Universal blue 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  border-radius: var(--border-radius);
  padding: 10px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 0px 5px;
  width: 100%;
  height: 100%;
}

.emotion-4 {
  width: 100%;
  height: 10px;
  border-radius: var(--border-radius);
  margin: 5px 0px;
}

<div>
  <div
    class="leaflet-custom-control emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <span>
        Low
      </span>
      <span>
        High
      </span>
    </div>
    <div
      class="emotion-4 emotion-5"
      data-teststyle-background="linear-gradient(to right, rgba(206,192,135,0.8), #8de, #09c, #07a, #058, #fe0, #fa0, #f70, #f40, #e00, #900, #faf)"
    />
  </div>
</div>
`;

exports[`Snow > Black and White 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  border-radius: var(--border-radius);
  padding: 10px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 0px 5px;
  width: 100%;
  height: 100%;
}

.emotion-4 {
  width: 100%;
  height: 10px;
  border-radius: var(--border-radius);
  margin: 5px 0px;
}

<div>
  <div
    class="leaflet-custom-control emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <span>
        Low
      </span>
      <span>
        High
      </span>
    </div>
    <div
      class="emotion-4 emotion-5"
      data-teststyle-background="linear-gradient(to right, white, #7f7f7fff)"
    />
    <div
      class="emotion-4 emotion-5"
      data-teststyle-background="linear-gradient(to right, #808080ff, #ffffffff)"
    />
  </div>
</div>
`;

exports[`Snow > Other 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  border-radius: var(--border-radius);
  padding: 10px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 0px 5px;
  width: 100%;
  height: 100%;
}

.emotion-4 {
  width: 100%;
  height: 10px;
  border-radius: var(--border-radius);
  margin: 5px 0px;
}

<div>
  <div
    class="leaflet-custom-control emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <span>
        Low
      </span>
      <span>
        High
      </span>
    </div>
    <div
      class="emotion-4 emotion-5"
      data-teststyle-background="linear-gradient(to right, #dfdfdf, #dfdfdf, #9bea8f, #58ff42, #47c278, #4793f9, #0c59ff, #6153c1, #ff93a3, #ff3f35, #c20511, #ffeb0a)"
    />
    <div
      class="emotion-4 emotion-5"
      data-teststyle-background="linear-gradient(to right, #9fffff, #5fcfff, #005fff)"
    />
  </div>
</div>
`;
